--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,12 @@ dependencies:
   flutter_riverpod: ^2.4.9
   supabase_flutter: ^1.10.25
   riverpod: ^2.4.9
+  firebase_core: ^2.24.2
+  firebase_core_web: ^2.10.0
+  firebase_auth: ^4.15.3
+  firebase_auth_web: ^5.8.12
+  cloud_firestore: ^4.13.6
+  cloud_firestore_web: ^3.8.10
 
 dev_dependencies:
   flutter_test:
